# Mnemosyne

./: .gitignore  .rustfmt.toml  ;:w  Cargo.toml  Makefile  README.md  \
.cargo/: config.toml
backup/: bootstrap.rs  buddy_pmm.rs
build_deps/: limine.conf  ramdisk.tar
kernel/: Cargo.toml
kernel/src/: main.rs
kernel/src/arch/: mod.rs
kernel/src/boot/: mod.rs  smp.rs
kernel/src/core/: mod.rs  shell.rs
kernel/src/drivers/: graphics.rs  logger.rs  mod.rs  tar.rs
kernel/src/memory/: heap.rs  init_pmm.rs  mod.rs  paging.rs  pmm.rs  vmm.rs  vmo.rs
kernel/src/syscall/: mod.rs
kernel/src/tasks/: initialization.rs  vfs_init.rs
kernel/src/tests/: mod.rs  (+1 more)
lib/vespertine-abi/: Cargo.toml
lib/vespertine-common/: Cargo.toml
lib/vespertine-rt/: Cargo.toml
libs/mnemosyne-abi/: Cargo.toml
ramdisk/Programs/: dt  hesper  loop  ns  shell  terminal
scripts/: linker.ld
src/: demo.rs  gdt.rs  graphics.rs  idt.rs  main.rs  panic.rs
src/arch/: mod.rs
src/boot/: mod.rs  smp.rs
src/core/: shell.rs
src/drivers/: graphics.rs  keyboard.rs  logger.rs  mod.rs  serial.rs
src/helpers/: bitwise.rs
src/kernel/: init_pmm.rs  lock.rs  mod.rs  pmm.rs  shell.rs  spin.rs  time.rs
src/memory/: bootalloc.rs  heap.rs  init_pmm.rs  mod.rs  paging.rs  pmm.rs  vmm.rs  vmo.rs
src/tasks/: initialization.rs  mod.rs  vfs_init.rs
src/tests/: memory_tests.rs  mod.rs  smp_tests.rs
src/util/: mod.rs  queue.rs
userland/dt/: Cargo.toml
userland/dt/src/: main.rs
userland/shell/: Cargo.toml
userland/terminal/: Cargo.toml
userland/terminal/src/: main.rs  term.rs
(+185 files in other folders)
