[workspace]
members = [
    "kernel",
    "lib/vespertine-abi",
    "lib/vespertine-common",
    "lib/vespertine-rt", "lib/vespertine-std", "userland/dt", "userland/hesper", "userland/ns", "userland/shell", "userland/terminal"]

resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
