[package]
name = "dt"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dt"
test = false
bench = false

[dependencies]
vespertine-rt = { path = "../../lib/vespertine-rt" }
vespertine-abi = { path = "../../lib/vespertine-abi" }
vespertine-std = { path = "../../lib/vespertine-std" }
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
chrono-tz = { version = "0.10", default-features = false, features = ["case-insensitive"] }
