[package]
name = "terminal"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "terminal"
test = false
bench = false

[dependencies]
vespertine-rt = { path = "../../lib/vespertine-rt" }
vespertine-abi = { path = "../../lib/vespertine-abi" }
vespertine-std = { path = "../../lib/vespertine-std" }
vte = { version = "0.15.0", default-features = false }
